--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,3 @@
-[submodule ".vim/bundle/neocomplcache"]
-	path = .vim/bundle/neocomplcache
-	url = https://github.com/Shougo/neocomplcache.git
-[submodule ".vim/bundle/unite.vim"]
-	path = .vim/bundle/unite.vim
-	url = https://github.com/Shougo/unite.vim.git
-[submodule ".vim/bundle/vimproc"]
-	path = .vim/bundle/vimproc
-	url = https://github.com/Shougo/vimproc.git
-[submodule ".vim/bundle/vimshell"]
-	path = .vim/bundle/vimshell
-	url = https://github.com/Shougo/vimshell.git
-[submodule ".vim/bundle/eregex"]
-	path = .vim/bundle/eregex
-	url = https://github.com/othree/eregex.vim.git
-[submodule ".vim/bundle/Align"]
-	path = .vim/bundle/Align
-	url = https://github.com/vim-scripts/Align.git
-[submodule ".vim/bundle/fugitive"]
-	path = .vim/bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule ".vim/bundle/grep"]
-	path = .vim/bundle/grep
-	url = https://github.com/vim-scripts/grep.vim.git
-[submodule ".vim/bundle/nerdcommenter"]
-	path = .vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
-[submodule ".vim/bundle/SQLUtilities"]
-	path = .vim/bundle/SQLUtilities
-	url = https://github.com/vim-scripts/SQLUtilities.git
-[submodule ".vim/bundle/TwitVim"]
-	path = .vim/bundle/TwitVim
-	url = https://github.com/vim-scripts/TwitVim.git
-[submodule ".vim/bundle/vim-smartchr"]
-	path = .vim/bundle/vim-smartchr
-	url = https://github.com/kana/vim-smartchr.git
+[submodule ".vim/bundle/vundle"]
+	path = .vim/bundle/vundle
+	url = http://github.com/gmarik/vundle.git
