--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-/.vim/bundle/*
-!/.vim/bundle/vundle
-/.vim/.vim_ref_cache
-/.vim/.vimshell
-/.vim/.unite
-/.vim/.twitvim.token
+/.vim/.*
 .DS_Store
