--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
     - vim --version
     - vint --version
     - vint .vimrc
-    - shellcheck .bashrc
+    - shellcheck -e SC2148 .bashrc
 
